# datascience-demo

./: .gitignore  README.md  TEST_RESULTS.md  model.ubj  pyproject.toml  temp_test.md
.github/workflows/: ci.yml
dashboard/: __init__.py  streamlit_app.py
dashboard/config/: __init__.py  settings.py
dashboard/tabs/: __init__.py
dashboard/tabs/abtest/: __init__.py  main.py
dashboard/tabs/genai/: __init__.py  main.py
dashboard/tabs/ml_inference/: __init__.py  main.py
dashboard/tabs/ml_models/: __init__.py  main.py
dashboard/tabs/preprocessing/: __init__.py  main.py
dashboard/tabs/python_tips/: __init__.py  main.py  python_guide.py
dashboard/tabs/sql/: __init__.py  main.py  sql_guide.py
dashboard/tabs/system_design/: __init__.py  main.py  system_design_guide.py
dashboard/utils/: __init__.py  data_utils.py  styling.py
data-distribution/: README.md  data_generators.py  parametrics_model.py
data-profiling/: data_profiling.py
docs/: Spark_Local_Installation_Guide.md
ml-pipeline/feature_pipeline/: Dockerfile  README.md  activity_view.sql  data_preprocessing.sql  revenues_view.sql  train_test_split.sql  users_view.sql
ml-pipeline/feature_pipeline/.astro/: config.yaml
ml-pipeline/feature_pipeline/dags/: bq_create_data_input_dag.py
ml-pipeline/feature_pipeline/sql/: train_test_split.sql  (+1 more)
ml-pipeline/inference_pipeline/: batch_inference.py  real_time_inference.py  streamlit_realtime_inference.py
ml-pipeline/training_pipeline/: xgboost_regression.py
tests/: TEST_RESULTS.md  __init__.py  test_data_profiling.py  test_report.html  test_results.xml
(+21 files in other folders)
